--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Judge
+= Trust
 
 This project rocks and uses MIT-LICENSE.
 
@@ -6,21 +6,21 @@ This project rocks and uses MIT-LICENSE.
 
 Install the gem
 
-    gem install judge
+    gem install trust
         
 === Setup your controller. 
 When a user has been identified you must set the current user. This can be done like this:
 
-    Judge::Authorization.user = current_user
+    Trust::Authorization.user = current_user
         
 To authorize access in your controller, you must have identified the action and the object / class to authorize. If model is nested, then you should also specify parent. You need to find the object or class and this can be done in a before filter. Once you have identified the object instance or class you can call this:
 
-    Judge::Authorization.authorize! action, instance, parent_instance
+    Trust::Authorization.authorize! action, instance, parent_instance
     
 We have however made it really easy for you if you would not like to setup the framework yourself
 All you have to do then is to embed this line in your controller after the user has been authenticated:
 
-    judged
+    trusted
 
 
         
