--- a/README.rdoc
+++ b/README.rdoc
@@ -1,12 +1,12 @@
 = Trust
 
-*Trust is a framework for authorization control - for Ruby On Rails.*
+=== Trust is a framework for authorization control - for Ruby On Rails.
 
 - Why yet another authorization framework you may ask?
 
-Well, we used Declarative Authorization for a while, but got stuck when it comes to name-spaces and inheritance. So, we investigated in the possibilities of using CanCan and CanTango, and found that CanCan could be slow, because all authorizations has to be loaded on every request. CanTango has tackled this problem by implementing cashing, but the framework is still evolving and seems fairly complex. At the same time, CanTango is role focused and not resource focused.
+Well, we used DeclarativeAuthorization[http://github.com/stffn/declarative_authorization] for a while, but got stuck when it comes to name-spaces and inheritance. So, we investigated in the possibilities of using CanCan[http://github.com/ryanb/cancan] and CanTango[http://github.com/kristianmandrup/cantango], and found that CanCan could be slow, because all authorizations has to be loaded on every request. CanTango has tackled this problem by implementing cashing, but the framework is still evolving and seems fairly complex. At the same time, CanTango is role focused and not resource focused.
 
-*What will you benefit from when using Trust?*
+=== What will you benefit from when using Trust?
 
 * Resource focused authorizations, not role focused
 * Complete support for inheritance in controllers
@@ -17,13 +17,14 @@ Well, we used Declarative Authorization for a while, but got stuck when it comes
 * Natural code evaluation in the authorizations declaration, i.e. you understand completely what is going on, because the implementation is done the way you implement condifitions in rails for validations and alike.
 * Automatic loading of instances and parents in controller
 
-*What is not supported in Trust*
+=== What is not supported in Trust
 
 * Loading datasets for the index action. You may use other plugins / gems for doing this, or you may implement youor own mechanism.
 
-*Currently not supported, but may be in the future*
+=== Currently not supported, but may be in the future
 
 * Support for devise. However you may easily implement this by overriding one method in your controller.
+* cannot and cannot? expressions.
 
 = Install and Setup
 
@@ -31,7 +32,7 @@ Install the gem
 
     gem install trust
 
-== Define authorizations
+=== Define authorizations
 
 Create the authorization file in your model directory. Example
 
@@ -72,7 +73,7 @@ You can also create aliases for actions. We have defined a predefined set of ali
 Processing of aliases are done in such way that permissions per action is expanded when the permissions are loaded, so thif you define :update when declaring the permissions, there will be one permission for :update and one for :edit
 
 
-== Apply access control in controller
+=== Apply access control in controller
 
 Place _trusted_ in your controller after the user has been identified. Someshing like this:
 
@@ -98,7 +99,7 @@ Handling access denied situations in your controller. Implement the following in
       end
     end
 
-== Define associations in your controller
+=== Define associations in your controller
 
 For nested resources you can easily define the associations using _belongs\_to_ like this:
 
@@ -111,7 +112,7 @@ For nested resources you can easily define the associations using _belongs\_to_ 
 You can specify as many associations as you like.
 
 
-= The can? method
+== The can? method
 
 The can? method is accessible from the controller, the views and the models. Here are some coding examples:
 
@@ -129,8 +130,35 @@ On ActiveRecord objects
     Customer.can? :create         # does the current user have permission to create customers?
     @account.can? :edit, @client  # is current user allowed to edit the account associated with the client?
 
+== Instance variables
 
-= Overriding defaults
+The filter :load\_resource will automatically load the instance for the resource in the controller. It will by default use the controller\_path to determine the name of the instance variable. Here are a couple of examples:
+
+  UsersController => @user
+  Account::CreditsController => @account_credit
+  
+If it is a nested resource, it will also instantiate the parent class, using the namedefined in belongs\_to to determine the name. E.g. if you have defined belongs_to :client, it will look for the parameter :client\_id and perform a find like Client.find(client\_id). Finding the resource will be done through the association between the two, such as client.accounts.find(id)
+
+You can override the naming by specifying model\_name before trusted, like this
+
+  class AccountsController < ApplicationController
+    login_required
+    model_name :wackount
+    trusted
+  end
+
+If you want to override the name with namespacing then
+
+  class Account::CreditsController < ApplicationController
+    login_required
+    model_name :"account/wreckit"
+    trusted
+  end
+
+
+
+
+== Overriding defaults
 
 If you prefer to use some other user reference than current_user you can override the method set_user like this in your controller:
 
